<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_notification"
            android:textColor="@color/colorBlue"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:textSize="100sp"/>

        <TextView
            android:id="@+id/wait_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_notification"
            android:textColor="@color/colorBlue"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/time_dist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:textSize="70sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textColor="@color/colorBlue" />
    </LinearLayout>

    <Button
        android:id="@+id/plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/profile"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorLightGreen"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/plan"
        android:background="@color/colorLightGreen"
        android:layout_margin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>